# td

./: .gitignore  .gitmodules  CMakeLists.txt
examples/pong/: CMakeLists.txt
examples/pong/src/: init.cpp
glfw/: CMakeLists.txt
td_core/: CMakeLists.txt
td_core/include/td/buffer/: buffer.h  buffer_layout.h  buffer_object.h  vbo_layout.h
td_core/include/td/core/: assert.h  buf.h  buffer.h  color.h  exception.h  fmt.h  gl.h  img.h  math_const.h  program.h  shader.h  vbo_layout.h
td_core/include/td/engine/: child_obj.h  engine.h  event.h  fwd.h  obj.h  obj_registry.h  object.h  parent_obj.h  tag_registry.h
td_core/include/td/event/: emitter.h  event.h  listener.h  listener_registry.h
td_core/include/td/geom/: ngon.h
td_core/include/td/gl/: bo.h  buffer_object.h  debug.h  drawer.h  enum.h  gl.h  gl_type.h  program.h  shader.h  shader_type.h  shader_var_info.h  sl_applier_common.h  sl_attribute_applier.h  sl_data_type.h  sl_uniform_applier.h  sl_var.h  sl_var_ref.h  sl_var_type.h  type.h  vbo_layout.h
td_core/include/td/shader/: program.h  shader.h
td_core/include/td/util/: fn_cast.h  plain_arithmetic_container.h
td_core/src/: main.cpp
td_core/src/td/buffer/: buffer.cpp  buffer_layout.cpp  buffer_object.cpp  vbo_layout.cpp
td_core/src/td/core/: exception.cpp  img.cpp  program.cpp  shader.cpp  vbo_layout.cpp
td_core/src/td/engine/: child_obj.cpp  engine.cpp  event.cpp  obj.cpp  obj_registry.cpp  object.cpp  parent_obj.cpp  tag_registry.cpp
td_core/src/td/event/: emitter.cpp  event.cpp  listener.cpp  listener_registry.cpp
td_core/src/td/gl/: debug.cpp  drawer.cpp  enum.cpp  program.cpp  shader.cpp  shader_type.cpp  shader_var_info.cpp  sl_data_type.cpp  sl_var_ref.cpp  sl_var_type.cpp  vbo_layout.cpp
td_core/src/td/shader/: program.cpp  shader.cpp
td_core/test/: color.cpp  main.cpp
td_core/test/td/buf/: buf.cpp  static_buf.cpp
td_core/test/td/buffer/: buffer.cpp  vbo_layout.cpp
td_core/test/td/core/: buf.cpp  static_buf.cpp
td_core/test/td/engine/: engine.cpp  event.cpp  obj.cpp
td_core/test/td/event/: listener.cpp
td_core/test/td/gl/: program.cpp  sl_var.cpp  vbo_layout.cpp
td_core/test/td/shader/: program.cpp
td_core/test/td/test/: call_rec.cpp  call_rec.h
td_core/test/td/util/: plain_arithmetic_container.cpp
td_glfw/: CMakeLists.txt
td_glfw/include/td/glfw/: glfw_engine.h
td_glfw/res/: my_shader.vs
td_glfw/src/: main.cpp
td_glfw/src/td/glfw/: glfw_engine.cpp
td_rc/: CMakeLists.txt  cmdline.schema.json  usage.txt
td_rc/src/: cmdline.cpp  cmdline.h  gen.cpp  gen.h  main.cpp  targets.cpp  targets.h
